# youtubetimesteps

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_debug.sh  build_release.sh  cmake_macos.sh
include/: nicsmocs.h
lib/: nicsmocs.lib  nicsmocsd.lib
src/: CMakeLists.txt  youtubeTimeSteps.cpp
